--- a/gctmd_chapter.tex
+++ b/gctmd_chapter.tex
@@ -51,9 +51,9 @@ Although we do not observe global secondary structure rearrangements by looking 
 	
 {\it \gct is largely collapsed}
 
-Given that NMR reports transitions between extended and collapsed conformations in the YD mutant, we hypothesize that a similar motion is driving the displacement observed in the RMSD computations. In order to obtain values of compactness that can be compared directly to NMR results, we compute the translational diffusion coefficient of conformers in our simulations. As a reference point for interpreting the diffusion values of the trajectories, we use the software \texttt{flexiblemeccano} to compute an esmeble of disordered peptides of the YD polypeptide. \texttt{flexiblemeccano} takes a primary sequence as input and generates an ensemble of 3D conformations based on amino acid specific conformational potentials and volume exclusion. We then use \texttt{hydroNMR} to compute \diffusion valus for each conformer and obtain a distribution for the $D_t$ of the \gct. From this distribution \figref{fm} we obtain a large range of conformations, from highly collapsed to extended against which we can compare MD sampled values.
+Given that NMR reports transitions between extended and collapsed conformations in the YD mutant, we hypothesize that a similar motion is driving the displacement observed in the RMSD computations. In order to obtain values of compactness that can be compared directly to NMR results, we compute the translational diffusion coefficient of conformers in our simulations. As a reference point for interpreting the diffusion values of the trajectories, we use the software \texttt{flexiblemeccano} to compute an esmeble of disordered peptides of the YD polypeptide. \texttt{flexiblemeccano} takes a primary sequence as input and generates an ensemble of 3D conformations based on amino acid specific conformational potentials and volume exclusion. We then use \texttt{hydroNMR} to compute \diffusion valus for each conformer and obtain a distribution for the $D_t$ of the \gct. From this distribution \figref{fig:fm} we obtain a large range of conformations, from highly collapsed to extended against which we can compare MD sampled values.
 
-From our simulations, we computed global averages for the radius of gyration, and translational diffusion coefficient over the \SI{2}{\us} simulations. Both simuations appear to occupy largely collapsed conformations which agrees with experimental findings \figref{dchist}. The WT polypeptide \diffusion mean is \diffusion = \num{1.237e-6} $\pm$ \SI{1.5816e-8}{\dcunits} while the value obtained through NMR is  \diffusion=\num{1.25e-6} $\pm$  \SI{1e-8}{\dcunits}. Similarly to what was seen by NMR, we find that the mean \diffusion of the Y11D \gct polypeptide is slightly lower than that of the WT \gct (\diffusion= \num{1.224e-6} $\pm$ \SI{3.503e-8}{\dcunits}). These results confirm that the \gct, while disordered, is more compact than a fully denatured polypeptide chain.
+From our simulations, we computed global averages for the radius of gyration, and translational diffusion coefficient over the \SI{2}{\us} simulations. Both simuations appear to occupy largely collapsed conformations which agrees with experimental findings \figref{fig:dchist}. The WT polypeptide \diffusion mean is \diffusion = \num{1.237e-6} $\pm$ \SI{1.5816e-8}{\dcunits} while the value obtained through NMR is  \diffusion=\num{1.25e-6} $\pm$  \SI{1e-8}{\dcunits}. Similarly to what was seen by NMR, we find that the mean \diffusion of the Y11D \gct polypeptide is slightly lower than that of the WT \gct (\diffusion= \num{1.224e-6} $\pm$ \SI{3.503e-8}{\dcunits}). These results confirm that the \gct, while disordered, is more compact than a fully denatured polypeptide chain.
 
 \todo{chi square goodness of fit}
 
@@ -70,9 +70,9 @@ From our simulations, we computed global averages for the radius of gyration, an
 
 \todo{give global averages and distributions}
 
-Translational diffusion coefficient measurements in NMR report that both \gct forms primarily occupy collapsed conformations. The global experimental average for the WT polypeptide obtained through NMR is \diffusion=\num{1.25e-6} $\pm$  \SI{1e-8}{\dcunits} which agrees well with the NMR-derived value (\diffusion=\num{1.25e-6} $\pm$  \SI{1e-8}{\dcunits}. Similarly to what was seen by NMR, we find that the mean \diffusion of the Y11D \gct polypeptide is slightly lower than that of the WT \gct (\diffusion= \num{1.224e-6} $\pm$ \SI{3.503e-8}{\dcunits}). These results confirm that the \gct, while disordered, is more compact than a fully denatured polypeptide chain \figref{dclines}. 
+Translational diffusion coefficient measurements in NMR report that both \gct forms primarily occupy collapsed conformations. The global experimental average for the WT polypeptide obtained through NMR is \diffusion=\num{1.25e-6} $\pm$  \SI{1e-8}{\dcunits} which agrees well with the NMR-derived value (\diffusion=\num{1.25e-6} $\pm$  \SI{1e-8}{\dcunits}. Similarly to what was seen by NMR, we find that the mean \diffusion of the Y11D \gct polypeptide is slightly lower than that of the WT \gct (\diffusion= \num{1.224e-6} $\pm$ \SI{3.503e-8}{\dcunits}). These results confirm that the \gct, while disordered, is more compact than a fully denatured polypeptide chain \figref{fig:dclines}. 
 
-Although both forms of the \gct primarily occupy collapsed and disordered conformations, we do observe that, as in NMR, the YD \gct has a slightly lower mean \diffusion than WT. From NMR we hypothesize that this is caused by transitions between compacted and extended driven by enhanced dynamics in the YD mutant. Lending support to this hypothesis, we show that we are able to explain the distribution of diffusion coefficients in the YD mutant as the sum of two gaussian distributions with parameters $\mu_1 =\SI{1.24e-6}{\dcunits}, \sigma_2= \num{2.34e-8}, \mu_2 =\SI{1.18e-6}{\dcunits}, \sigma_2= \num{2.21e-8}$ \figref{dchistyd}. This suggests that the YD dynamics likely give rise to a two-state system where a minor state occupies extended conformations. Meanwhile, the WT \diffusion distribution is best explained by a single normal distribution which suggests that the peptide occupies a single stable state which corresponds to the compacted portion of conormation space \figref{dchistwt}.
+Although both forms of the \gct primarily occupy collapsed and disordered conformations, we do observe that, as in NMR, the YD \gct has a slightly lower mean \diffusion than WT. From NMR we hypothesize that this is caused by transitions between compacted and extended driven by enhanced dynamics in the YD mutant. Lending support to this hypothesis, we show that we are able to explain the distribution of diffusion coefficients in the YD mutant as the sum of two gaussian distributions with parameters $\mu_1 =\SI{1.24e-6}{\dcunits}, \sigma_2= \num{2.34e-8}, \mu_2 =\SI{1.18e-6}{\dcunits}, \sigma_2= \num{2.21e-8}$ \figref{fig:dchistyd}. This suggests that the YD dynamics likely give rise to a two-state system where a minor state occupies extended conformations. Meanwhile, the WT \diffusion distribution is best explained by a single normal distribution which suggests that the peptide occupies a single stable state which corresponds to the compacted portion of conormation space \figref{fig:dchistwt}.
 
 \begin{figure}
 \centering     %%% not \center
@@ -118,7 +118,7 @@ We next use the distribution of \diffusion to generate an initial characterizati
 
 Until this point, we have identified the presence of an extended sub-population of the YD \gct that is absent in the WT. This lends support to the hypothesis that the shift in \diffusion measured by NMR is due to transient expansions of the YD backbone into an extended state. Complementary to this finding, is the fact that residues in the YD polypeptide show evidence of collective motions detected as shifts in chemical environment through NMR \todo{r2 figure appendix} which suggest that the transition between states occurs in a coodrinated manner. We therefore seek to test whether correlated motions are also present in the simulation, and if they are, whether they can explain the transitions between collapsed and extended states.
 
-We performed covariance analysis, also known as Principal Component Analysis on \gct trajectories to identify major axes of correlated motion. We use \texttt{covar} and \texttt{anaeig} from the \texttt{GROMACS} package to build a covariance matrix for backbone atoms to extract principal modes and perform eigenvector projections. In order to eliminate rotational and diffusive \todo{look this up} translations we align all frames in the trajectory to the average structure as computed by \texttt{covar} using RMSD based clustering. As is typical with molecular simulations which operate on a limited number of degrees of freedom, the first few eigenvectors in both trajectories account for nearly all of the variation in the trajectories \figref{eigenvalues}. We therefore focus our attention on the two first major modes of motion. \todo{time plot of projections in major components}. \figref{pca} shows a 2 dimensional projection onto the first two eigenvalues of WT and YD trajectories. Each point represents a 3D conformation in the \SI{2}{\us} simulation projected along the first two eigenvectors. The WT projection shows a conformational space that is closely clustered, indicative of constrained motions which is consistent with the low dispersions found in NMR and the single state behaviour suggested by RMSD and \diffusion analysis. However, the YD appears to be exploring  multiple conformation clusters which is in agreement with the presence of high dispersion groups found in NMR. Furthermore, by coloring each conformation with a normalized \diffusion value we are able to show that correlated motions along the major modes correspond with transitions between collapsed and extended states. In order to visualize the transitons, we generate a porcupine plot depicting the direction of motion between conformations on two extremes of the second principal component projections \figref{porcupine}.  We show that the transition between collapsed and extended is indeed driven by a separation of the N and C termius in a correlated fashion. \todo{cosine content} With this analysis we are able to propose a physical mechanism to explain the concerted global dynamics and diffusion coefficient shift observed in NMR as the action of correlated motions brought about by a local change in electrostatic environment. This phsyical mechanism would be the first example of an organized regulatory switch that does not count on disorder-order transitoins but rather remains in the disordered ensemble. 
+We performed covariance analysis, also known as Principal Component Analysis on \gct trajectories to identify major axes of correlated motion. We use \texttt{covar} and \texttt{anaeig} from the \texttt{GROMACS} package to build a covariance matrix for backbone atoms to extract principal modes and perform eigenvector projections. In order to eliminate rotational and diffusive \todo{look this up} translations we align all frames in the trajectory to the average structure as computed by \texttt{covar} using RMSD based clustering. As is typical with molecular simulations which operate on a limited number of degrees of freedom, the first few eigenvectors in both trajectories account for nearly all of the variation in the trajectories \figref{fig:eigenvalues}. We therefore focus our attention on the two first major modes of motion. \todo{time plot of projections in major components}. \figref{fig:pca} shows a 2 dimensional projection onto the first two eigenvalues of WT and YD trajectories. Each point represents a 3D conformation in the \SI{2}{\us} simulation projected along the first two eigenvectors. The WT projection shows a conformational space that is closely clustered, indicative of constrained motions which is consistent with the low dispersions found in NMR and the single state behaviour suggested by RMSD and \diffusion analysis. However, the YD appears to be exploring  multiple conformation clusters which is in agreement with the presence of high dispersion groups found in NMR. Furthermore, by coloring each conformation with a normalized \diffusion value we are able to show that correlated motions along the major modes correspond with transitions between collapsed and extended states. In order to visualize the transitons, we generate a porcupine plot depicting the direction of motion between conformations on two extremes of the second principal component projections \figref{fig:porcupine}.  We show that the transition between collapsed and extended is indeed driven by a separation of the N and C termius in a correlated fashion. \todo{cosine content} With this analysis we are able to propose a physical mechanism to explain the concerted global dynamics and diffusion coefficient shift observed in NMR as the action of correlated motions brought about by a local change in electrostatic environment. This phsyical mechanism would be the first example of an organized regulatory switch that does not count on disorder-order transitoins but rather remains in the disordered ensemble. 
 
 %When choosing which component to use for the visualization we computed cosine content values of each projection. This has been shown to be an effective method for detecting the presence of diffusion in signals from trajectories which often dominate the first few eigenvectors. The only component with significantly high cosine content was the first principal component of the YD simulation and so we focus our attention on projections along the second component.
 
@@ -136,9 +136,9 @@ We performed covariance analysis, also known as Principal Component Analysis on 
 \begin{figure}
 	\thispagestyle{empty}
 	\centering     %%% not \center
-	\subfigure[WT]{\label{fig:a}\includegraphics[width=0.65\textwidth]{2d_scatter_wt}}
-	\subfigure[YD]{\label{fig:b}\includegraphics[width=0.65\textwidth]{2d_scatter_yd}}
-	\FigureCaption{Secondary structure assignments}
+	\subfigure[WT]{\label{fig:a}\includegraphics[width=0.49\textwidth]{2d_scatter_wt}}
+	\subfigure[YD]{\label{fig:b}\includegraphics[width=0.49\textwidth]{2d_scatter_yd}} 
+	\FigureCaption{{\bf Principal Component Analysis}}{This is the text of the PCA figure}
 	\clearpage
 	\label{fig:pca}
 \end{figure}
@@ -167,7 +167,7 @@ Through NMR measurements and MD computer simluations, we demonstrate the first e
 
 Both NMR and MD are in strong agreement that the conformational sampling of the \gct lies entirely within the diordered ensemble as no signal of secondary structure was detected by either method. Diffusion measurements show that the major conformational state of the \gct in the WT and in the YD is collapsed, with the YD having a slightly larger hydrodynamic radius global average. However, NMR and MD simulations both provide evidence that a single point mutation to a negatively charged residue Y>D produces concerted motions along the entire polypeptide that are not present in the WT \gct. Analysis of the collective motions detected in MDS by PCA correspond closely to transitions between collapsed and extended states which leads us to hypothesize that the changes in chemical environment detected in MDS and difference in hydrodynamic radius is a product of an correlated opening and closing motion brought about by the Y>D mutation. This coordinated opening is likely brought about by the effects of electrostatic repulsion as the Asp substituion introduces further negative charge in an alread acidic region. It has been previously shown that charge has a strong influence on the conformational ensemble and diffusion rates in IDPs \cite{mao2010net}. Once the \gct enters the open state, several hydrophobic residues in the middle of the polypeptide(L464, A466, G468) become accessibile for protein-protein interactions.
 
- Because both WT and YD appear to have the same collapsed native state and differ only when the YD undergoes transient excursion to an extended state, we can model this behaviour as a two well potential system \figref{wellsb}. The equilibrium between extended and collapsed conformations is shifted by phosphorylation to render extensions more accessible in the YD.  Previously, such dynamics were only observed in the well characterized order-to disorder transitions, or the foldling on binding pardigm. Furthermore, this model stands in contrast to the existing assumption that disordered ensembles are largely uniform \figref{wellsa} and constitute a uniform space of random chains. And instead, we observe that the disordered ensemble has some structure that IDPs can explore to modulate functionality by giving rise to switch-likeb behaviour while remaining disordered. Such behvaviour likely presents advantages to the cell through its ability to provide high specificity and low affinity binding at a low entropic cost. This suggests for the first time that the disordered conformational landscape can be organized and can therefore be host to coordinated and functional transitions.
+ Because both WT and YD appear to have the same collapsed native state and differ only when the YD undergoes transient excursion to an extended state, we can model this behaviour as a two well potential system \figref{fig:wellsb}. The equilibrium between extended and collapsed conformations is shifted by phosphorylation to render extensions more accessible in the YD.  Previously, such dynamics were only observed in the well characterized order-to disorder transitions, or the foldling on binding pardigm. Furthermore, this model stands in contrast to the existing assumption that disordered ensembles are largely uniform \figref{fig:wellsa} and constitute a uniform space of random chains. And instead, we observe that the disordered ensemble has some structure that IDPs can explore to modulate functionality by giving rise to switch-likeb behaviour while remaining disordered. Such behvaviour likely presents advantages to the cell through its ability to provide high specificity and low affinity binding at a low entropic cost. This suggests for the first time that the disordered conformational landscape can be organized and can therefore be host to coordinated and functional transitions.
 
 \begin{figure}
 \centering     %%% not \center
@@ -176,7 +176,7 @@ Both NMR and MD are in strong agreement that the conformational sampling of the 
 \label{fig:wells}
 \end{figure}
 
-From these findings we propose that phosphorylation at Y445 of the \gct acts as a regulatory switch to modulate protein-protein interactions. In order to better visualize this mechanism, we dock 3D structures obtained from full $\gamma$-Tubulin simulations into cryo electron microscopy models of the $\gamma$-TuRC \figref{turc} which previously lacked any information on the \gct due to its disordered nature. Based on this visualization we can propose a mechanism to explain the phenotype of hyper-stable microtubules in the Y445D mutants in vivo; the extensions that project outward from the complex brought about by the Y>D substitution, or phosphorylation, allow the $\gamma$-TuRC to selectively recruit effector proteins to the minus end of microtubules, making them available to the entire complex and which subsequently act to regulate microtubule dynamics. The constitutive addition of negative charge in the Y445D mutant therefore shifts the equilibrium between the collapsed and extended states, leading to a misregulation of the recruitment of microtubule associated proteins and thus a defect in microtubule dynamics. Which protein is being recruited by the \gct remains an open question but there are several candidates known to affect microtubule stability and localize to the spindle poles \todo{which candidates} are currently being verified through various experimental screens. However, the characterization of \gct conformational sampling  is an essential fist step in identifying potential interactors and understanding the complex mechanisms by which IDRs regulate large molecular machines.
+From these findings we propose that phosphorylation at Y445 of the \gct acts as a regulatory switch to modulate protein-protein interactions. In order to better visualize this mechanism, we dock 3D structures obtained from full $\gamma$-Tubulin simulations into cryo electron microscopy models of the $\gamma$-TuRC \figref{fig:turc} which previously lacked any information on the \gct due to its disordered nature. Based on this visualization we can propose a mechanism to explain the phenotype of hyper-stable microtubules in the Y445D mutants in vivo; the extensions that project outward from the complex brought about by the Y>D substitution, or phosphorylation, allow the $\gamma$-TuRC to selectively recruit effector proteins to the minus end of microtubules, making them available to the entire complex and which subsequently act to regulate microtubule dynamics. The constitutive addition of negative charge in the Y445D mutant therefore shifts the equilibrium between the collapsed and extended states, leading to a misregulation of the recruitment of microtubule associated proteins and thus a defect in microtubule dynamics. Which protein is being recruited by the \gct remains an open question but there are several candidates known to affect microtubule stability and localize to the spindle poles \todo{which candidates} are currently being verified through various experimental screens. However, the characterization of \gct conformational sampling  is an essential fist step in identifying potential interactors and understanding the complex mechanisms by which IDRs regulate large molecular machines.
 
 \begin{figure}
 \centering
