--- a/introduction.tex
+++ b/introduction.tex
@@ -3,9 +3,16 @@
 
 \epigraph{Everything existing in the universe is the fruit of chance and necessity.}{Democritus}
 
-Molecular machines are assemblies of proteins that interact in a coordinated manner to solve a biological problem. These biological problems, such as coordinating chromosome separation during cell division, \todo{get more examples}, etc.  cover all processes essential to life. Given the necessity for survival in the face of ever changing environments, evolution has produced a large diversity of intricate molecular mechanisms for solving these problems in a flexible and robust manner. A machine that functions properly only under unchanging conditions and inputs is not likely to survive in a biological context. Therefore, at the core of each of those processes are highly complex networks of protein interactions that are able to assemble, communicate, coordinate, self-regulate and self-correct in order to accomplish the necessary task reliably. \todo{maybe put DNA example in next paragraph}For example, the vital process of DNA replication is executed by a large multitude of proteins that each contribute to the process of copying the genome. The replication machinery must read environmental queues for initiating replication at the correct time, while complex combinatoric signalling networks ensure that DNA replication unfolds in a processive manner, enzymatic components perform physical work by unwinding the DNA strand for copying, and others communicate with the DNA repair machinery to correct copying errors and avoid harmful mutations. It is clear that solving this biological problem requires the ability of participating proteins to interact with many different partners and mediate many different processes.  
+Molecular machines are assemblies of proteins that interact in a coordinated manner to solve a biological problem. These biological problems, such as coordinating chromosome separation during cell division, cell cycle timing, protein synthesis, etc. cover many processes essential to life. Given the necessity for survival in the face of ever changing environments, evolution has produced a large diversity of molecular mechanisms for solving these problems in a flexible yet robust manner. A machine that functions properly only under unchanging conditions and inputs is not likely to survive in a biological context. Therefore, at the core of each of those processes are highly complex networks of protein interactions that are able to assemble, communicate, coordinate, self-regulate and self-correct in order to accomplish the necessary task reliably. For example, the vital process of DNA replication is executed by a large multitude of proteins that each contribute to the process of copying the genome. The replication machinery must read environmental queues for initiating replication at the correct time, while complex combinatoric signalling networks ensure that DNA replication unfolds in a processive manner, enzymatic components perform physical work by unwinding the DNA strand for copying, and others communicate with the DNA repair machinery to correct copying errors and avoid harmful mutations. It is clear that solving this biological problem requires the ability of participating proteins to interact with many different partners and mediate many different processes.  
 
-The way proteins are able to control interactions and drive function is through the conformational arrangement of their backbones which is encoded in each protein's amino acid sequence. Specific spatial arrangements of peptide chains, also known as protein structure, allows for specific interactions between proteins to assemble molecular machines, recruit necessary factors and mediate necessary chemical reactions. \todo{include figure of yeast $\gamma$-tubulin structure to illustrate stable vs IDP} Since the 1950s when the first X-ray crystallography protein structure was solved, we have learned a great deal about how 3D architecture and motions of the chains give rise to protein function. By capturing various conformations of folded protein domains, we have been able to infer that motions between structural conformations is the main element of control in protein function. For example, \todo{example of basic protein structure-rearrangement}. \figref{tub4}  However, it is important to note that X-ray crystallography only offers static pictures of protein structure, and provides information mostly on the spatial arrangement of relatively large stable domains in proteins. It therefore became a long standing dogma that the stable 3D folds of a protein chain dictate a protein's function. Yet, as we saw with DNA replication, molecular processes are incredibly complex, and a single protein often has to play many roles, interact with various different partners and be able to do so in a rapid and controllable manner. It is therefore unlikely that such large scale and consequently slow structural motions can account for all of the precise and rapid control we observe in biological systems. A static description of proteins is not sufficient to explain the degree of functional flexibility and control that we observe. This leaves us with several questions. If one structure means one function, how can the same protein fulfill multiple functions and engage in many different interactions? How can molecular machines offer such precise control of functionality while counting only on a static architectures? The broad aim of this thesis is therefore to improve our understanding of the physical mechanisms underlying the functional complexity of molecular machines.
+The way proteins are able to control interactions and drive function is through the conformational arrangement of their backbones which is encoded in each protein's amino acid sequence. Specific spatial arrangements of peptide chains, also known as protein structure, allows for specific interactions between proteins to assemble molecular machines, recruit necessary factors and mediate necessary chemical reactions. \todo{include figure of yeast $\gamma$-tubulin structure to illustrate stable vs IDP} Since the 1950s when the first X-ray crystallography protein structure was solved, we have learned a great deal about how 3D architecture and motions of the chains give rise to protein function. By capturing various conformations of folded protein domains, we have been able to infer that motions between structural conformations is the main element of control in protein function. For example, \todo{example of basic protein structure-rearrangement}. \figref{fig:tub4}  However, it is important to note that X-ray crystallography only offers static pictures of protein structure, and provides information mostly on the spatial arrangement of relatively large stable domains in proteins. It therefore became a long standing dogma that the stable 3D folds of a protein chain dictate a protein's function. Yet, as we saw with DNA replication, molecular processes are incredibly complex, and a single protein often has to play many roles, interact with various different partners and be able to do so in a rapid and controllable manner. It is therefore unlikely that such large scale and consequently slow structural motions can account for all of the precise and rapid control we observe in biological systems. A static description of proteins is not sufficient to explain the degree of functional flexibility and control that we observe. This leaves us with several questions. If one structure means one function, how can the same protein fulfill multiple functions and engage in many different interactions? How can molecular machines offer such precise control of functionality while counting only on a static architectures? The broad aim of this thesis is therefore to improve our understanding of the physical mechanisms underlying the functional complexity of molecular machines.
+
+\begin{figure}
+\centering
+\includegraphics[height=0.5\textheight]{tub4}
+\label{fig:tub4}
+\FigureCaption{tub4 homology model}
+\end{figure}
 
 \section{Disorder in proteins}
 
@@ -14,14 +21,6 @@ One potential source of functional plasticity can be found in regions of protein
 \todo{The lack of structure in IDPs can be explained by their characteristically low sequence complexities, and an enrichment for polar and charged residues over large hydrophobic amino acids which tend to favour rigid folding. }
 
 For a long time, these types of protein element were overlooked in favour of studying stable folding patterns. IDRs were thought to act simply as flexible linkers between structural domains without any  function or their own. This was also due in part to the fact that the main tool being used for structural biology, X-ray crystallography, fails to detect patterns in unfolded chains, making it difficult to study highly dynamic elements in protein such as IDPs. Techniques that do produce information on dynamics such as NMR only developed for proteins until much later. The first protein structure solved by X-ray crystallography was in 1958 and it was not until 1984 that the first protein structure was solved using NMR. Likewise, until recently, computational tools to study protein dynamics {\it ab initio}, such as Molecular Dynamics (MD) were greatly limited by shortcomings in processor power. However, with large advances in experimental and computational techniques in recent years, we have been able to study the dynamic properties of IDEs in great detail, and have found that they play key roles in the functioning of molecular machines. 
-
-
-%\begin{figure}
-%\centering
-%\includegraphics[height=0.35\textheight]{figures/tub4_tyr.png}
-%\caption{Homology model of $\gamma$-Tubulin from human crystal structure. Features a large organized globular domain with stable  $\beta$-sheet and $\alpha$-helix domains. IDPs can be seen linking structured domains as well as protruding from the globular domain on the C-terminus (red). }
-%\label{tub4}
-%\end{figure}
 
 \section{Physical mechanisms of IDP function in cellular machines}
 
@@ -35,7 +34,7 @@ A key aspect of dynamic control is the ability to modulate function in a precise
 
 {\it Disorder-Order transitions}
 
-The best explored physical mechanism of IDP function is the fold-on binding paradigm. In this case, IDPs in the free form are unstructured, and when they encounter their binding target, they undergo a folding transition (disorder to order) to form a stable complex. The lack of structure in the unbound state allows the the IDP to recognize multiple targets, and it allows binding to be inducible instead of constitutive. A well studied example of this kind of mechanism is the binding of the transcriptional activator protein CREB and its co-activator CPB. An IDR in CREB known as KID mediates binding to CPB where upon binding, the IDP folds into a pair of helices. However, this binding process is not favoured spontaneously due to loss of entropy induced by folding. \footnote{We consider the expression for Gibbs free energy, $\Delta G = \Delta H - T\Delta S$, where $\Delta H$ is the change in enthalpy, or heat energy available to the system, and $\Delta S$ is the entropy, or degree of disorder/conformational freedom available to the system. If we define our system as a protein chain, we see that a decrease in entropy which can be brought upon by the ordering of a structure will result in a positive $\Delta G$ thus making the reaction energetically unfavourable. This loss of entropy, or conformational freedom, can be overcome by a release of heat, or a sufficiently negative $\Delta H$ component which can tip the energetic balance toward $\Delta G < 0$. One might say that the decrease in entropy in the protein would be in violation of the second law of thermodynamics which states that all systems tend toward an increase in entropy. However, a reaction with a negative $\Delta H$, in other words, a reaction releasing heat will cause an increase in entropy to its surrounding environment. In the case of protein, the process of folding will reduce the entropy of the protein, but if the folding has a negative $\Delta H$ it will release heat and thus increase the entropy of the water molecules surrounding it.}However, when the KID is phosphorylated, the phosphoryl group interacts with CPB by forming hydrogen bonds which result in a negative enthalpic change that compensates for the loss of entropy and thus makes the folding reaction favourable. Because of the inducible nature of this interaction, CPB is able to also interact with other co-factors, which has been reported in the literature. \cite{radhakrishnan1997solution} This is an example of how even though the association state of the IDP is ordered, it is  the intrinsic disorder and entropy of the unbound state which acts as a tool for controlling the interaction. \\
+The best explored physical mechanism of IDP function is the fold-on binding paradigm. In this case, IDPs in the free form are unstructured, and when they encounter their binding target, they undergo a folding transition (disorder to order) to form a stable complex. The lack of structure in the unbound state allows the the IDP to recognize multiple targets, and it allows binding to be inducible instead of constitutive. A well studied example of this kind of mechanism is the binding of the transcriptional activator protein CREB and its co-activator CBP. An IDR in CREB known as KID mediates binding to CBP where upon binding, the IDP folds into a pair of helices. However, this binding process is not favoured spontaneously due to loss of entropy induced by folding. \footnote{We consider the expression for Gibbs free energy, $\Delta G = \Delta H - T\Delta S$, where $\Delta H$ is the change in enthalpy, or heat energy available to the system, and $\Delta S$ is the entropy, or degree of disorder/conformational freedom available to the system. If we define our system as a protein chain, we see that a decrease in entropy which can be brought upon by the ordering of a structure will result in a positive $\Delta G$ thus making the reaction energetically unfavourable. This loss of entropy, or conformational freedom, can be overcome by a release of heat, or a sufficiently negative $\Delta H$ component which can tip the energetic balance toward $\Delta G < 0$. One might say that the decrease in entropy in the protein would be in violation of the second law of thermodynamics which states that all systems tend toward an increase in entropy. However, a reaction with a negative $\Delta H$, in other words, a reaction releasing heat will cause an increase in entropy to its surrounding environment. In the case of protein, the process of folding will reduce the entropy of the protein, but if the folding has a negative $\Delta H$ it will release heat and thus increase the entropy of the water molecules surrounding it.}However, when the KID is phosphorylated, the phosphoryl group interacts with CBP by forming hydrogen bonds which result in a negative enthalpic change that compensates for the loss of entropy and thus makes the folding reaction favourable. Because of the inducible nature of this interaction, CBP is able to also interact with other co-factors, which has been reported in the literature. \cite{radhakrishnan1997solution} This is an example of how even though the association state of the IDP is ordered, it is  the intrinsic disorder and entropy of the unbound state which acts as a tool for controlling the interaction. \\
 
 
 \pagebreak
