--- a/thesis_cgo.bib
+++ b/thesis_cgo.bib
@@ -57,3 +57,13 @@
   year={2010},
   publisher={National Acad Sciences}
 }
+@article{davey2011viruses,
+  title={How viruses hijack cell regulation},
+  author={Davey, Norman E and Trav{\'e}, Gilles and Gibson, Toby J},
+  journal={Trends in biochemical sciences},
+  volume={36},
+  number={3},
+  pages={159--169},
+  year={2011},
+  publisher={Elsevier}
+}
