--- a/thesis_cgo.tex
+++ b/thesis_cgo.tex
@@ -25,7 +25,7 @@
 \newcommand{\diffusion}{$D_{t}$\xspace}
 \newcommand{\gct}{$\gamma$-CT\xspace}
 \newcommand{\dcunits}{\cm\squared\per\second}
-\newcommand{\figref}[1]{{\bf Fig. \ref{#1}}}
+\newcommand{\figref}[1]{{\bf Fig.~\ref{#1}}}
 \newcommand{\vek}[1]{\mathbf{#1}}
 
 %%% SETTINGS %%%
