editing intro/results

--- a/thesis_cgo.bib
+++ b/thesis_cgo.bib
@@ -67,3 +67,33 @@
   year={2011},
   publisher={Elsevier}
 }
+@article{meador1992target,
+  title={Target enzyme recognition by calmodulin: 2.4 A structure of a calmodulin-peptide complex},
+  author={Meador, William E and Means, Anthony R and Quiocho, Florante A},
+  journal={Science},
+  volume={257},
+  number={5074},
+  pages={1251--1255},
+  year={1992},
+  publisher={American Association for the Advancement of Science}
+}
+@article{aldaz2005insights,
+  title={Insights into microtubule nucleation from the crystal structure of human $\gamma$-tubulin},
+  author={Aldaz, Hector and Rice, Luke M and Stearns, Tim and Agard, David A},
+  journal={Nature},
+  volume={435},
+  number={7041},
+  pages={523--527},
+  year={2005},
+  publisher={Nature Publishing Group}
+}
+@article{wright2015intrinsically,
+  title={Intrinsically disordered proteins in cellular signalling and regulation},
+  author={Wright, Peter E and Dyson, H Jane},
+  journal={Nature Reviews Molecular Cell Biology},
+  volume={16},
+  number={1},
+  pages={18--29},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
