--- a/thesis_cgo.tex
+++ b/thesis_cgo.tex
@@ -11,6 +11,7 @@
 \usepackage{physics}
 \usepackage{graphicx}
 \usepackage{subfigure}
+\usepackage[labelfont=bf]{caption}
 
 
 \graphicspath{{figures/}}
