--- a/introduction.tex
+++ b/introduction.tex
@@ -3,28 +3,28 @@
 
 \epigraph{Everything existing in the universe is the fruit of chance and necessity.}{Democritus}
 
-Molecular machines are assemblies of proteins that interact in a coordinated manner to solve a biological problem. These biological problems, such as coordinating chromosome separation during cell division, cell cycle timing, protein synthesis, etc. cover many processes essential to life. Given the necessity for survival in the face of ever changing environments, evolution has produced a large diversity of molecular mechanisms for solving these problems in a flexible yet robust manner. A machine that functions properly only under unchanging conditions and inputs is not likely to survive in a biological context. Therefore, at the core of each of those processes are highly complex networks of protein interactions that are able to assemble, communicate, coordinate, self-regulate and self-correct in order to accomplish the necessary task reliably. For example, the vital process of DNA replication is executed by a large multitude of proteins that each contribute to the process of copying the genome. The replication machinery must read environmental queues for initiating replication at the correct time, while complex combinatoric signalling networks ensure that DNA replication unfolds in a processive manner, enzymatic components perform physical work by unwinding the DNA strand for copying, and others communicate with the DNA repair machinery to correct copying errors and avoid harmful mutations. It is clear that solving this biological problem requires the ability of participating proteins to interact with many different partners and mediate many different processes.  
+Molecular machines are assemblies of proteins that interact in a coordinated manner to solve a biological problem. These biological problems, such as coordinating chromosome separation during cell division, cell cycle timing, protein synthesis, etc. cover many processes essential to life. Given the necessity for survival in the face of ever changing environments, evolution has produced a large diversity of molecular mechanisms for solving these problems in a flexible yet robust manner. A machine that only functions properly under unchanging conditions and inputs is not likely to survive in a biological context. Therefore, at the core of each of those processes are highly complex networks of protein interactions that are able to assemble, communicate, coordinate, self-regulate and self-correct in order to accomplish the necessary task reliably. For example, the vital process of DNA replication is executed by a large multitude of proteins that each contribute to the process of copying the genome. The replication machinery must read environmental cues for initiating replication at the correct time, meanwhile complex combinatoric signaling networks ensure that DNA replication unfolds in a processive manner, enzymatic components perform physical work by unwinding the DNA strand for copying, and others communicate with the DNA repair machinery to correct copying errors and avoid harmful mutations. It is clear that solving this biological problem requires the ability of participating proteins to interact with many different partners and mediate many different processes.  
 
-The way proteins are able to control interactions and drive function is through the conformational arrangement of their backbones which is encoded in each protein's amino acid sequence. Specific spatial arrangements of peptide chains, also known as protein structure, allows for specific interactions between proteins to assemble molecular machines, recruit necessary factors and mediate necessary chemical reactions. \todo{include figure of yeast $\gamma$-tubulin structure to illustrate stable vs IDP} Since the 1950s when the first X-ray crystallography protein structure was solved, we have learned a great deal about how 3D architecture and motions of the chains give rise to protein function. By capturing various conformations of folded protein domains, we have been able to infer that motions between structural conformations is the main element of control in protein function. For example, \todo{example of basic protein structure-rearrangement}. \figref{fig:tub4}  However, it is important to note that X-ray crystallography only offers static pictures of protein structure, and provides information mostly on the spatial arrangement of relatively large stable domains in proteins. It therefore became a long standing dogma that the stable 3D folds of a protein chain dictate a protein's function. Yet, as we saw with DNA replication, molecular processes are incredibly complex, and a single protein often has to play many roles, interact with various different partners and be able to do so in a rapid and controllable manner. It is therefore unlikely that such large scale and consequently slow structural motions can account for all of the precise and rapid control we observe in biological systems. A static description of proteins is not sufficient to explain the degree of functional flexibility and control that we observe. This leaves us with several questions. If one structure means one function, how can the same protein fulfill multiple functions and engage in many different interactions? How can molecular machines offer such precise control of functionality while counting only on a static architectures? The broad aim of this thesis is therefore to improve our understanding of the physical mechanisms underlying the functional complexity of molecular machines.
+The way proteins are able to control interactions and drive function is through the conformational arrangement of their backbones which is encoded in each protein's amino acid sequence. Specific spatial arrangements of peptide chains, also known as protein structure, allows for specific interactions between proteins to assemble molecular machines, recruit necessary factors and mediate necessary chemical reactions. See \figref{tub4} for a visualization of protein structure. Since the 1950s when the first X-ray crystallography protein structure was solved, we have learned a great deal about how 3D architecture and motions of the chains give rise to protein function. By capturing various conformations of folded protein domains, we have been able to infer that coordinated motions between structural conformations is the main element of control in protein function. For example, X-ray crystallography experiments have shown that the activity of Calmodulin, an important signalling protein is modulated by conformational changes of its $\alpha$-helix domains brought about by binding of Ca+ ions~\cite{meador1992target}. These conformational rearrangements initiate a clamping motion of the helical domains which allow Calmodulin to bind to its downstream targets. However, it is important to note that X-ray crystallography only offers static pictures of protein structure, and provides information mostly on the spatial arrangement of relatively large stable domains in proteins. It therefore became a long standing dogma that the stable 3D folds of a protein chain dictate a protein's function, also known as the "one structure - one function" paradigm. Yet, as we saw with DNA replication, molecular processes are incredibly complex. A single protein is often required to fulfill many functions, interact with various different partners and be able to do so on very fast timescales. It is therefore unlikely that such large scale and consequently slow structural motions can account for all of the precise and rapid control we observe in biological systems. A static description of proteins is not sufficient to explain the degree of functional flexibility and control that we observe. This leaves us with several questions. If one structure means one function, how can the same protein fulfill multiple functions and engage in many different interactions? How can molecular machines offer such precise control of functionality while counting only on a static architectures? The broad aim of this thesis is therefore to improve our understanding of the physical mechanisms underlying the functional complexity of molecular machines.
 
-\begin{figure}
+\begin{figure}[h!]
 \centering
-\includegraphics[height=0.5\textheight]{tub4}
+\includegraphics[height=0.4\textheight]{tub4}
+\FigureCaption{$\gamma$-Tubulin 3D Structure}{Visual representation of the yeast $\gamma$-Tubulin protein based on the human $\gamma$-Tubulin structure derived from X-ray crystallography~\cite{aldaz2005insights}. The protein is composed of a highly ordered globular domain stabilized by various $\alpha$-helices and $\beta$-sheet domains and measures \SI{2.20}{\nm} in radius of gyration. In red, we see the disordered \gct region which was absent in the crystal structure and was modeled by \texttt{RaptorX}.}
 \label{fig:tub4}
-\FigureCaption{tub4 homology model}
 \end{figure}
 
 \section{Disorder in proteins}
 
-One potential source of functional plasticity can be found in regions of proteins that do not adopt stable architectures, also known as intrinsically disordered proteins (IDPs). While IDPs are highly flexible and largely unstructured, functional studies have shown that they are necessary for many cellular processes.  \footnote{We will use the term IDP loosely to denote any unstructured protein element. Some works make the distinction between IDP and IDR where an IDR is an intrinsically disordered region and is not a full protein. There will be instances in the text where we will use IDR in this way.} Instead of relying on a structure for function, IDP functionality lies the absence of structure. This flexibility offers the protein rapid access to a vast pool of conformations with which to fine-tune and diversify its function. Many examples have now been described where IDPs flexibility is used to dynamically regulate binding, mediate signalling, impose thresholds, and sense environmental queues. 
+One potential source of functional plasticity can be found in regions of proteins that do not adopt stable architectures, also known as intrinsically disordered proteins (IDPs). While IDPs are highly flexible and largely unstructured, functional studies have shown that they are necessary for many cellular processes.  \footnote{We will use the term IDP loosely to denote any unstructured protein element. Some works make the distinction between IDP and IDR where an IDR is an intrinsically disordered region and is not a full protein. There will be instances in the text where we will use IDR in this way.} Instead of relying on a structure for function, IDP functionality lies the absence of structure. This flexibility offers the protein rapid access to a vast pool of conformations with which to fine-tune and diversify its function. Many examples have now been described where IDPs flexibility is used to dynamically regulate binding, mediate signaling, impose thresholds, and sense environmental queues. 
 
 \todo{The lack of structure in IDPs can be explained by their characteristically low sequence complexities, and an enrichment for polar and charged residues over large hydrophobic amino acids which tend to favour rigid folding. }
 
 For a long time, these types of protein element were overlooked in favour of studying stable folding patterns. IDRs were thought to act simply as flexible linkers between structural domains without any  function or their own. This was also due in part to the fact that the main tool being used for structural biology, X-ray crystallography, fails to detect patterns in unfolded chains, making it difficult to study highly dynamic elements in protein such as IDPs. Techniques that do produce information on dynamics such as NMR only developed for proteins until much later. The first protein structure solved by X-ray crystallography was in 1958 and it was not until 1984 that the first protein structure was solved using NMR. Likewise, until recently, computational tools to study protein dynamics {\it ab initio}, such as Molecular Dynamics (MD) were greatly limited by shortcomings in processor power. However, with large advances in experimental and computational techniques in recent years, we have been able to study the dynamic properties of IDEs in great detail, and have found that they play key roles in the functioning of molecular machines. 
 
-\section{Physical mechanisms of IDP function in cellular machines}
+Given the prevalence of disorder in proteins, it is not surprising that IDPs have been implicated in a multitude of cellular processes and disease states through NMR and mutational studies. These processes include signalling, cell cycle control, transcription, translation, ribosome assembly, chromatin organization, microtubule assembly/disassembly, etc ~\cite{wright2015intrinsically}. Interestingly, it has been shown that viral proteins use IDPs in their proteins to hijack cellular proteins and use the flexibility of IDPs to mimic host proteins and recruit host cellular machinery in order to propagate.\cite{davey2011viruses} This would suggest that viral proteins use IDPs to make efficient use of their smaller genomes and obtain a greater range of function from the limited number of proteins in their genomes. It is now clear that IDPs, through their lack of structure, are an important adaptive feature that drive the functional complexity and robustness we observe in molecular machines. \\
 
-Given that disorder in proteins is so prevalent it is not surprising that IDPs have been implicated in a multitude of cellular processes and disease states through NMR and mutational studies. These processes include signalling, cell cycle control, transcription, translation, ribosome assembly, chromatin organization, microtubule assembly/disassembly, etc. Interestingly, it has been shown that viral proteins use IDPs in their proteins to hijack cellular proteins and use the flexibility of IDPs to mimic host proteins and recruit host cellular machinery in order to propagate.\cite{davey2011viruses} An interesting hypothesis that came from these observations is that viral proteins use IDPs to make efficient use of their smaller genomes and obtain a greater range of function from the limited number of proteins in their genomes. It is now clear that IDPs, through their lack of structure, are an important adaptive feature allowing the functional complexity and robustness we observe in molecular machines. \\
+\section{Physical mechanisms of IDP function in cellular machines}
 
 In this section we will give a brief account of some of the physical mechanisms of IDP function that have been described in the literature. \\
 
